# linuxtag_2021

./: .clang-format  .gitignore  README.md
cmake/: common.cmake  setup.cmake
cmake/linuxtag/: CMakeLists.txt
cmake/linuxtag/hello/: CMakeLists.txt
cmake/linuxtag/objects/: CMakeLists.txt
cmake/linuxtag/widgets/: CMakeLists.txt
cmake/linuxtag/windows/: CMakeLists.txt  windows.qrc
resources/: resources.qrc
src/common/: log.cpp  log.hpp
src/hello/: hello.cpp
src/objects/: doessth.cpp  doessth.hpp  objects.cpp
src/widgets/: clickme.cpp  clickme.hpp  widgets.cpp
src/windows/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mybutton.cpp  mybutton.hpp  windows.cpp
